tests/tests/errors/2006-34.vb
'#compiler-options:/define:
'#compiler-message:Command line error BC2006 : option 'define' requires ':<symbol_list>'
'#exit-code:1